--- a/app/views/pages/form.html.erb
+++ b/app/views/pages/form.html.erb
@@ -1,4 +1,6 @@
-<h1>Add a Page</h1>
+<h1> 
+  <%= @page.id ? 'Edit Page' : 'Add Page' %>
+</h1>
 <%= form_for @page do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
